# SmartRAG

./: .gitignore  README.md  SmartRAG_Design.md  Untitled.md  pyproject.toml
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_material_management.py  0003_parse_runs.py  0004_flatten_agent_profiles.py  0005_chunk_runs.py  0006_vector_runs.py  0007_rag_flows.py  0008_evaluation_framework.py  0009_smartrag_agent.py  0010_langfuse_trace_id.py
backend/app/: main.py  mcp_server.py
backend/app/agent_actions/: __init__.py  actions.py  registry.py
backend/app/api/v1/: agents.py  catalog.py  chunks.py  evaluations.py  materials.py  models.py  rag.py  router.py  smartrag_agent.py  vectors.py
backend/app/chunkers/: __init__.py  adapters.py  registry.py
backend/app/clients/: base.py  factory.py  ollama.py  openai_compatible.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/evaluators/: __init__.py  adapters.py  registry.py
backend/app/models/: __init__.py  entities.py
backend/app/observability/: __init__.py  langfuse_integration.py
backend/app/parsers/: __init__.py  adapters.py  registry.py
backend/app/rag/: __init__.py  registry.py
backend/app/schemas/: agent_actions.py  agents.py  chunks.py  common.py  evaluations.py  materials.py  models.py  rag.py  vectors.py
backend/app/services/: agents.py  catalog.py  chunks.py  evaluations.py  materials.py  models.py  parse_runs.py  rag.py  smartrag_agent.py  vectors.py
backend/app/vectorstores/: __init__.py  adapters.py  registry.py
backend/prompts/failure_analysis/: default.md
backend/prompts/hyde/: default.md
backend/prompts/llm_judge/: default.md
backend/prompts/metadata_extraction/: default.md
backend/prompts/multi_query/: default.md
backend/prompts/query_compress/: default.md
backend/prompts/query_decompose/: default.md
backend/prompts/query_rewrite/: default.md
backend/prompts/routing/: default.md
backend/prompts/strategy_planner/: default.md
backend/tests/: test_agent_actions.py  test_agent_langfuse.py  test_agents.py  test_chunkers.py  test_evaluations.py  test_materials.py  test_openai_compatible_client.py  test_parse_runs.py  test_parsers.py  test_rag.py  test_security.py  test_vectors.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: LangfuseTraceLink.tsx  MetricScoreGrid.tsx  SchemaFormItems.tsx  TableActionButton.tsx
frontend/src/pages/: AgentProfilesPage.tsx  AgentRunHistoryPage.tsx  ChunkComparePage.tsx  ChunkRunDetailPage.tsx  ChunkRunsPage.tsx  ChunkStrategiesPage.tsx  ComponentConfigsPage.tsx  EvaluationDatasetDetailPage.tsx  EvaluationDatasetRunsPage.tsx  EvaluationDatasetsPage.tsx  EvaluationReportDetailPage.tsx  EvaluationReportListPage.tsx  EvaluationReportsPage.tsx  MaterialBatchDetailPage.tsx  MaterialBatchesPage.tsx  MaterialChunkPage.tsx  MaterialParsePage.tsx  MaterialVectorPage.tsx  ModelDefaultsPage.tsx  ModelsPage.tsx  ParseRunDetailPage.tsx  ParseRunsPage.tsx  ParserStrategiesPage.tsx  RagFlowBuilderPage.tsx  (+8 more)
infra/: .env.langfuse.example  docker-compose.langfuse.yml
(+2 files in other folders)
