[project]
name = "smartrag-backend"
version = "0.1.0"
description = "SmartRAG backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2,<2.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "cryptography>=43.0.0,<44.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "sqlalchemy[asyncio]>=2.0.32,<3.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "respx>=0.21.1,<1.0.0",
  "ruff>=0.6.0,<1.0.0"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", ".uv-cache", "pytest-cache-files-*"]
