[project]
name = "smartrag-backend"
version = "0.1.0"
description = "SmartRAG backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2,<2.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "cryptography>=43.0.0,<44.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "chromadb>=0.5.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "sqlalchemy[asyncio]>=2.0.32,<3.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0"
]

[project.optional-dependencies]
parsers-pdf = [
  "pdfminer.six>=20240706,<20250507",
  "pdfplumber>=0.11.0,<1.0.0",
  "pymupdf>=1.24.0,<2.0.0",
  "pypdf>=4.3.0,<6.0.0",
  "pypdfium2>=4.30.0,<5.0.0"
]
parsers-unstructured = [
  "unstructured[pdf,md]>=0.16.0,<1.0.0"
]
parsers-local = [
  "pdfminer.six>=20240706,<20250507",
  "pdfplumber>=0.11.0,<1.0.0",
  "pymupdf>=1.24.0,<2.0.0",
  "pypdf>=4.3.0,<6.0.0",
  "pypdfium2>=4.30.0,<5.0.0",
  "unstructured[pdf,md]>=0.16.0,<1.0.0"
]
chunk-langchain = [
  "langchain-text-splitters>=0.3.0,<1.0.0"
]
chunk-llama-index = [
  "llama-index-core>=0.12.0,<1.0.0"
]
chunk-korean = [
  "konlpy>=0.6.0,<1.0.0"
]
chunk-semantic = [
  "llama-index-core>=0.12.0,<1.0.0"
]
vector-qdrant = [
  "qdrant-client>=1.12.0,<2.0.0"
]
vector-pgvector = [
  "pgvector>=0.3.0,<1.0.0"
]
rag-rerank-local = [
  "flashrank>=0.2.10,<1.0.0",
  "sentence-transformers>=3.0.0,<6.0.0",
  "transformers>=4.44.0,<5.0.0"
]
rag-rerank-flag = [
  "FlagEmbedding>=1.2.10,<2.0.0"
]
rag-rerank-openvino = [
  "openvino>=2024.0.0,<2027.0.0"
]
rag-compress = [
  "llmlingua>=0.2.2,<1.0.0"
]
eval-ragas = [
  "ragas>=0.3.5,<0.4.0",
  "datasets>=4.0.0,<5.0.0"
]
rag-all = [
  "flashrank>=0.2.10,<1.0.0",
  "sentence-transformers>=3.0.0,<6.0.0",
  "transformers>=4.44.0,<5.0.0",
  "FlagEmbedding>=1.2.10,<2.0.0",
  "openvino>=2024.0.0,<2027.0.0",
  "llmlingua>=0.2.2,<1.0.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "respx>=0.21.1,<1.0.0",
  "ruff>=0.6.0,<1.0.0"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", ".uv-cache", "pytest-cache-files-*"]
